--- a/archive.html
+++ b/archive.html
@@ -1,12 +1,11 @@
 ---
-layout: default
+layout: page
 title: Archive
 permalink: /archive/
 ---
 
 <div class="home">
   <div class="post-list archive">
-    <h1>Archive</h1>
     <ul>{% for post in site.posts %}{% assign year = post.date | date: '%Y' %}{% assign lastyear = post.next.date | date: '%Y' %}
       {% if year != lastyear %}<li class="year"><h2>{{ year }}</h2></li>{% endif %}
       <li>
